--- a/assets/404.html
+++ b/assets/404.html
@@ -22,7 +22,7 @@ permalink: /404.html
 
             <p>the page you are looking for not avaible!</p>
 
-            <a href="" class="link_404">Go to Home</a>
+            <a href="{{ '/' | relative_url }}" class="link_404">Go to Home</a>
           </div>
         </div>
       </div>
